# mazehem

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
client/: Cargo.toml
client/src/: client.rs  game.rs  main.rs
server/: Cargo.toml
server/src/: main.rs  maze.rs  server.rs
src/: cell.rs  coord.rs  drawable.rs  game.rs  game_server.rs  goals.rs  input.rs  main.rs  maze.rs  player.rs  save.rs  save.txt
types/: Cargo.toml
types/src/: cell.rs  constants.rs  coord.rs  data.rs  drawable.rs  input.rs  lib.rs  player.rs
