[package]
name = "mazehem_server"
version = "0.1.0"
authors = ["Thomas Plisson <thomas.plisson@epitech.eu>"]
edition = "2018"

[dependencies]
types = { path = "../types" }
coffee = { version = "0.4", features = ["opengl"] }
indexmap = "1.8.0"
rand = "0.8.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.1"
laminar = "0.5.0"
crossbeam-channel = "0.5.2"
local-ip-address = "0.4.4"
